--- a/My-Personal-Website/style.css
+++ b/My-Personal-Website/style.css
@@ -5,9 +5,6 @@ body{
     text-align: justify;
     color: #7D1E6A;
     background-color: #EEB0B0;
-}
-
-body {
     font-family: 'Work Sans', sans-serif;
     font-weight: 400;
 
@@ -19,15 +16,36 @@ h1, h2, h3, h4, h5, h6 {
   
 }
 
-.button {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 500;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
+
 
 a {
   color: #FFE59D;
   text-decoration: none;
+}
+
+.topnav {
+ background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+.topnav a.active {
+  background-color: #f15483;
+  color: white;
 }
